BUGFIX: fixed bar overflowing page. HT to David

--- a/css/toolbar.css
+++ b/css/toolbar.css
@@ -1,16 +1,11 @@
 /* Navigation Bar */
 body.has-ss-globaltoolbar {
 	padding-top: 48px; 
+	overflow-x: hidden;
 }
 
 .ss-globaltoolbar {
 	width: 100%;
-	height: 30px;
-	-moz-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-	-webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-	background: url("../images/bar-bg.gif") repeat-x scroll left top #dae5e1;
-	border-bottom: 1px solid #fff;
-	padding: 14px 0 4px;
 	position: absolute;
 	top: 0;
 }
@@ -19,6 +14,16 @@ body.has-ss-globaltoolbar {
 		margin: 0;
 		padding: 0;
 		border: 0;
+	}
+
+	.ss-globaltoolbar .ss-globaltoolbar-shadow {
+		-moz-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+		-webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+		box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+		background: url("../images/bar-bg.gif") repeat-x scroll left top #dae5e1;
+		border-bottom: 1px solid #fff;
+		padding: 14px 0 4px;
+		height: 32px;
 	}
 
 	.ss-globaltoolbar .inner {
@@ -37,7 +42,7 @@ body.has-ss-globaltoolbar {
 	}
 	.ss-globaltoolbar ul {
 		float: left;
-		padding-top: 1px;
+		padding-top: 2px;
 	}
 	.ss-globaltoolbar ul li {
 		display: inline;
@@ -51,6 +56,7 @@ body.has-ss-globaltoolbar {
 		}
 		.ss-globaltoolbar ul li a span {
 			padding: 3px 12px 5px 0;
+			text-shadow: 0 1px 2px #fff;
 		}
 		.ss-globaltoolbar ul li a:hover,
 		.ss-globaltoolbar ul li.current a,
